--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   dio: ^4.0.0
   # svg图片
   flutter_svg: ^0.22.0
+  # 兼容空安全的swiper
+  flutter_swiper_null_safety: ^1.0.2
 
 
 
@@ -53,7 +55,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  assets:
+    - assets/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
