--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,11 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
+  fonts:
+    - family: Impact
+      fonts:
+        - asset: assets/fonts/Impact.ttf
+          weight: 400 # normal
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
